--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-aa
+<!-- HTML5 -->
+<!DOCTYPE htmL>
+<html lang="pt-br">
+<head>
+	<title>THE SIMPLE SITE</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/page2.css">
+
+	<script type="text/javascript" src="js/app/jquery-1.9.0.min.js"></script>
+	<script type="text/javascript" src="js/global.js"></script>
+
+</head>
+<body>
+<div class="content-slide-0 sli-width">
+	<div class="grid-home clearfix">
+		<div class="bol-tags">
+		</div>
+		<div class="title-site">
+			<h1> WELCOME TO <span class="size-1">THE SIMPLE SITE</span></h1>
+			<blockquote>A website that teaches how to make a SIMPLE SITE.</blockquote>
+			<p>Join us and have fun.</p>
+
+			<a href="#" class="button-enter">ENTER SITE</a>
+		</div>
+	</div>
+</div>
+
+<!-- PAGE 2 - ETAPA 1 
+<div class="conten-slide-1">
+	
+</div>-->
+
+</body>
+</htmL>
